# Janus

./: Cargo.toml  README.md  dream-gb2312.txt  heartless_euckr.txt  meian_eucjp.txt  random-data-generate.py
benches/: gb18030.rs  gb2312.rs  jp.rs  kr.rs
src/: euc_jp.rs  euc_kr.rs  gb18030.rs  gb2312.rs  lib.rs  main.rs  tools.rs
