[package]
name = "Janus"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
libc = "0.2"
encoding_rs = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gb2312"
harness = false

[[bench]]
name = "gb18030"
harness = false

[[bench]]
name = "jp"
harness = false

[[bench]]
name = "kr"
harness = false